--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!-- <!doctype html>
 <html>
 	<head></head>
 	<body>
@@ -6,5 +6,6 @@
 		<h1>madhav web dev</h1>
 	</div>	
 	</body>
-</html>	
+</html>	 -->
 
+<iframe src="https://github.com/eidikodev/ghpages/blob/main/GitHub%20Enterprise%20On%26Off%20Boarding%20Instructions_v2.pptx" style="width:600px;" frameborder="0"></iframe>
