--- a/index.html
+++ b/index.html
@@ -8,4 +8,4 @@
 	</body>
 </html>	 -->
 
-<iframe src="https://github.com/eidikodev/ghpages/blob/main/GitHub%20Enterprise%20On%26Off%20Boarding%20Instructions_v2.pptx" style="width:600px;" frameborder="0"></iframe>
+<iframe src="https://github.com/eidikodev/ghpages/blob/main/GitHub%20Enterprise%20On%26Off%20Boarding%20Instructions_v2.pptx&embedded=true" style="width:600px;" frameborder="0"></iframe>
