--- a/index.html
+++ b/index.html
@@ -1,11 +1,21 @@
-<!-- <!doctype html>
+<!DOCTYPE html>
 <html>
-	<head></head>
-	<body>
-	<div>
-		<h1>madhav web dev</h1>
-	</div>	
-	</body>
-</html>	 -->
-
-<iframe src="https://github.com/eidikodev/ghpages/blob/main/GitHub%20Enterprise%20On%26Off%20Boarding%20Instructions_v2.pptx&embedded=true" style="width:600px;" frameborder="0"></iframe>
+<head>
+  <style>
+    .text-style {
+      font-size: 14px; /* Decrease the font size to your desired value */
+      font-style: italic; /* Change the font style to italic or any other desired style */
+    }
+  </style>
+</head>
+<body>
+  <ul>
+    <li>
+      <a class="l" href="#pf1" data-dest-details='[1, "XYZ", 0, 540, null]'>text here</a>
+    </li>
+    <li>
+      <a></a>
+    </li>
+  </ul>
+</body>
+</html>
